<resources>
    <string name="app_name" translatable="false">SkyLink</string>

    <!--bottom nav menu strings-->
    <string name="bottom_nav_home">Home</string>
    <string name="bottom_nav_bookings">Bookings</string>
    <string name="bottom_nav_profile">Profile</string>
    <string name="bottom_nav_more">More</string>
    <string name="title_settings_menu">Settings Menu</string>
    <string name="title_add_new_flight">Add new flight</string>
    <string name="title_add_new_aircraft">Add new aircraft</string>
    <string name="title_add_new_airline">Add new airline</string>
    <string name="title_activity_settings" translatable="false">SettingsActivity</string>

    <!--Preference Titles-->
    <string name="settings_activity_title">Settings</string>
    <string name="general_header">General</string>

    <!--ListPreference Theme-->
    <string name="theme_title">App Theme Selection</string>
    <string name="theme_summary">Personalize your app\'s look and feel by choosing between different themes.</string>
    <string name="theme_day">Day</string>
    <string name="theme_night">Night</string>
    <string name="theme_day_night">System-based</string>
    <string name="pref_theme_key" translatable="false">app_theme</string>
    <string name="default_theme_value" translatable="false">day_night</string>

    <!--ListPreference Color-->
    <string name="color_title">Select your app\'s theme color</string>
    <string name="color_summary">Choose from eight different colors to customize the app\'s theme to your liking.</string>
    <string name="colorTeal">Teal</string>
    <string name="colorIndigo">Indigo</string>
    <string name="colorDarkPurple">Dark Purple</string>
    <string name="colorBlue">Blue</string>
    <string name="colorGreen">Green</string>
    <string name="colorAmber">Amber</string>
    <string name="colorRed">Red</string>
    <string name="colorPink">Pink</string>
    <string name="pref_color_key" translatable="false">app_color</string>
    <string name="default_color_value" translatable="false">teal</string>

    <string name="register">Register</string>
    <string name="register_username">Username</string>
    <string name="register_email">Email address</string>
    <string name="register_password">Password</string>
    <string name="register_password_confirm">Password confirmation</string>

    <string name="unexpected_error">Unexpected error!</string>
    <string name="all_fields_must_be_filled">All fields must be filled!</string>
    <string name="passwords_do_not_match">Passwords do not match!</string>
    <string name="password_too_short">The length of the password must be at least 8!</string>

    <string name="login">Login</string>
    <string name="login_google">Sign in with Google</string>
    <string name="anonymous" translatable="false">Anonymous</string>
    <string name="cant_logout_anonymous">Logging out isn\'t available for guest users. Please sign in to access logout functionality.</string>
    <string name="login_success">Logged in successfully!</string>
    <string name="logout_success">Logged out successfully!</string>

    <string name="flight">Flight</string>
    <string name="departure_city">Departure City</string>
    <string name="destination_city">Destination City</string>
    <string name="date">Date</string>
    <string name="departure_time">Departure Time</string>
    <string name="arrival_time">Arrival Time</string>
    <string name="aircraft">Aircraft</string>
    <string name="airline">Airline</string>
    <string name="price">Price</string>
    <string name="hour">\u00A0hour</string>
    <string name="minutes">\u00A0minutes</string>

    <string name="airline_name">Airline name</string>
    <string name="aircraft_model">Aircraft model</string>
    <string name="first_class_seats">Number of first class seats</string>
    <string name="second_class_seats">Number of second class seats</string>

    <string name="new_flight_added">Successfully added new flight!</string>
    <string name="new_aircraft_added">Successfully added new aircraft!</string>
    <string name="new_airline_added">Successfully added new airline!</string>

    <string name="modify_flights">Modify flights</string>
    <string name="flight_deleted">Flight deleted successfully!</string>
    <string name="flight_modified">Flight modified successfully!</string>
    <string name="flight_booked">Flight booked successfully!</string>
    <string name="booking_deleted">Booking deleted successfully!</string>
    <string name="booking_changed">Booking changed successfully!</string>

    <string name="first_class_seat">First class seat</string>
    <string name="second_class_seat">Second class seat</string>
    <string name="first_class_seat_price">First class seat price</string>
    <string name="second_class_seat_price">Second class seat price</string>
    <string name="book_first_class_seat">Book first class seat</string>
    <string name="book_second_class_seat">Book second class seat</string>
    <string name="change_to_first_class_seat">Change to first class seat</string>
    <string name="change_to_second_class_seat">Change to second class seat</string>

    <string name="submit_changes">Submit changes</string>
    <string name="create_profile_to_access_more_functions">Please consider creating a user profile to have access to more functions.</string>
    <string name="notification_on_flight_booked">Please note that your seat number will be assigned at the airport, and payment for your ticket will be processed there as well.</string>
</resources>