<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/register_email"
        android:inputType="textEmailAddress"
        android:background="@drawable/custom_rounded_edittext"
        android:layout_margin="8dp"
        android:padding="16dp"/>

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/register_password"
        android:inputType="textPassword"
        android:background="@drawable/custom_rounded_edittext"
        android:layout_margin="8dp"
        android:padding="16dp"/>

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textColor="@color/white"
        android:background="@drawable/custom_register_button"
        android:layout_margin="8dp"
        android:padding="8dp"/>

    <Button
        android:id="@+id/buttonGoogleSignIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_google"
        android:textColor="@color/white"
        android:background="@drawable/custom_register_button"
        android:layout_margin="8dp"
        android:padding="8dp"/>

</LinearLayout>