<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/change_departure_city"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/departure_city"
        android:inputType="text"
        android:background="@drawable/custom_rounded_edittext"
        android:layout_margin="8dp"
        android:padding="16dp"/>

    <EditText
        android:id="@+id/change_destination_city"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/destination_city"
        android:inputType="text"
        android:background="@drawable/custom_rounded_edittext"
        android:layout_margin="8dp"
        android:padding="16dp"/>

    <TextView
        android:id="@+id/change_date_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/date"
        android:textSize="18sp"
        android:layout_margin="8dp"
        android:padding="16dp"/>

    <DatePicker
        android:id="@+id/change_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_rounded_textview"
        android:headerBackground="@drawable/custom_rounded_textview"
        android:layout_margin="8dp"
        android:padding="16dp"/>

    <TextView
        android:id="@+id/change_departure_time_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/departure_time"
        android:textSize="18sp"
        android:layout_margin="8dp"
        android:padding="16dp"/>

    <TimePicker
        android:id="@+id/change_departure_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_rounded_textview"
        android:headerBackground="@drawable/custom_rounded_textview"
        android:numbersBackgroundColor="?attr/colorTransparentCustom"
        android:layout_margin="8dp"
        android:padding="16dp"/>

    <TextView
        android:id="@+id/change_arrival_time_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/arrival_time"
        android:textSize="18sp"
        android:layout_margin="8dp"
        android:padding="16dp"/>

    <TimePicker
        android:id="@+id/change_arrival_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_rounded_textview"
        android:headerBackground="@drawable/custom_rounded_textview"
        android:numbersBackgroundColor="?attr/colorTransparentCustom"
        android:layout_margin="8dp"
        android:padding="16dp"/>

    <Button
        android:id="@+id/submit_changes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/submit_changes"
        android:textColor="@color/white"
        android:background="@drawable/custom_register_button"
        android:layout_margin="8dp"
        android:padding="8dp"/>

</LinearLayout>
</ScrollView>