<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ui.activity.FlightActivity">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/new_flight_toolbar"
            android:layout_width="0dp"
            android:layout_height="?attr/actionBarSize"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="?attr/colorAccent"
            app:navigationIcon="@drawable/ic_arrow_back_24"
            app:navigationIconTint="@color/white">

            <TextView
                android:id="@+id/new_flight_toolbar_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/flight"
                android:textSize="24sp"
                android:textColor="@color/white"
                android:layout_gravity="center" />

            <ImageButton
                android:id="@+id/new_flight_checkmark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_checkmark_24"
                android:background="@drawable/ripple_circle"
                android:layout_gravity="end"
                android:layout_margin="8dp"
                android:padding="8dp" />

        </androidx.appcompat.widget.Toolbar>

        <EditText
            android:id="@+id/departure_city"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/departure_city"
            android:inputType="text"
            android:background="@drawable/custom_rounded_edittext"
            app:layout_constraintTop_toBottomOf="@id/new_flight_toolbar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_margin="16dp"
            android:padding="16dp"/>

        <EditText
            android:id="@+id/destination_city"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/destination_city"
            android:inputType="text"
            android:background="@drawable/custom_rounded_edittext"
            app:layout_constraintTop_toBottomOf="@id/departure_city"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_margin="16dp"
            android:padding="16dp"/>

        <TextView
            android:id="@+id/date_picker_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@id/destination_city"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_margin="16dp"
            android:padding="16dp"/>

        <DatePicker
            android:id="@+id/date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_rounded_textview"
            android:headerBackground="@drawable/custom_rounded_textview"
            app:layout_constraintTop_toBottomOf="@id/date_picker_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_margin="16dp"
            android:padding="16dp"/>

        <TextView
            android:id="@+id/departure_time_picker_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/departure_time"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@id/date"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_margin="16dp"
            android:padding="16dp"/>

        <TimePicker
            android:id="@+id/departure_time"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_rounded_textview"
            android:headerBackground="@drawable/custom_rounded_textview"
            android:numbersBackgroundColor="?attr/colorTransparentCustom"
            app:layout_constraintTop_toBottomOf="@id/departure_time_picker_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_margin="16dp"
            android:padding="16dp"/>

        <TextView
            android:id="@+id/arrival_time_picker_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/arrival_time"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@id/departure_time"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_margin="16dp"
            android:padding="16dp"/>

        <TimePicker
            android:id="@+id/arrival_time"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_rounded_textview"
            android:headerBackground="@drawable/custom_rounded_textview"
            android:numbersBackgroundColor="?attr/colorTransparentCustom"
            app:layout_constraintTop_toBottomOf="@id/arrival_time_picker_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_margin="16dp"
            android:padding="16dp"/>

        <Spinner
            android:id="@+id/aircraft"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_rounded_spinner"
            app:layout_constraintTop_toBottomOf="@id/arrival_time"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_margin="16dp"
            android:padding="16dp"/>

        <Spinner
            android:id="@+id/airline"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_rounded_spinner"
            app:layout_constraintTop_toBottomOf="@id/aircraft"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_margin="16dp"
            android:padding="16dp"/>

        <EditText
            android:id="@+id/price"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/price"
            android:inputType="number"
            android:background="@drawable/custom_rounded_edittext"
            app:layout_constraintTop_toBottomOf="@id/airline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_margin="16dp"
            android:padding="16dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>